# Testing

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml  daily-scan.yml
_phase_b_stubs/: scoring.py
_phase_b_stubs/indicators/: _base.py  bollinger.py  daily_trend.py  mav_breakout.py  mav_diff_z.py  rsi.py  stochastic.py  volatility.py  volume.py
_phase_b_stubs/tests/: test_indicators.py  test_scoring.py  test_tsc_regression.py
dashboard/: artifact.html  index.html  latest.json
reference/: range_breakout_scanner_brief.docx
scripts/: inspect_box_breakout.py  resend_probe.py
spec/: box-breakout-mt.md  dashboard-json.md  eodhd-probe-notes.md  indicators.md  multi-timeframe.md  phase-c-plan.md  resend-probe-notes.md  scoring.md  source-spreadsheet.md  spec-box-breakout.md  universe.md
src/scanner/: __init__.py  cli.py  scoring.py
src/scanner/agent/: __init__.py  briefing.py
tests/: conftest.py  smoke_mtf.py  smoke_mtf_comp.py  smoke_mtf_comp2.py  smoke_mtf_comp_test.py  smoke_mtf_final.py  smoke_mtf_historical.py  smoke_mtf_params.py  smoke_mtf_postgate.py  smoke_mtf_tol.py  smoke_mtf_tol2.py  smoke_mtf_tol3.py  test_bollinger.py  test_box_breakout.py  test_briefing.py  test_cli.py  test_daily_trend.py  test_dashboard_json.py  test_email.py  test_eodhd.py  test_excel.py  test_mav_breakout.py  test_mav_diff_z.py  test_mtf_orchestrator.py  test_range_atr.py  test_rsi.py  test_stochastic.py  test_storage.py  test_universe.py  test_volatility.py  test_volume.py  test_yfinance_meta.py
(+71 files in other folders)
