[project]
name = "signal-scanner"
version = "0.1.0"
description = "Global equity technical scanner — ports the TSC 2012 dashboard to live EODHD data"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "duckdb>=0.10",
    "pandas-ta>=0.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=8.2",
    "ruff>=0.4",
]

[project.scripts]
scanner = "scanner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scanner"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 99
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short -q"
